@@ -1,6 +1,7 @@
 #!/usr/bin/env python2
 # -*- coding: utf-8 -*-
 
+#       Copyright (C) 2005-2007 Carabos Coop. V. All rights reserved
 #       Copyright (C) 2008-2013 Vicent Mas. All rights reserved
 #
 #       This program is free software: you can redistribute it and/or modify
@@ -32,6 +33,7 @@ __docformat__ = 'restructuredtext'
 
 from PyQt4 import QtCore
 from PyQt4 import QtGui
+
 
 class LeafDelegate(QtGui.QStyledItemDelegate):
     """
