@@ -40,7 +40,7 @@ from PyQt4 import QtCore
 from PyQt4 import QtGui
 
 import vitables.vttables.scrollbar as scrollbar
-import vitables.vttables.leafDelegate as leafDelegate
+import vitables.vttables.leaf_delegate as leaf_delegate
 
 class LeafView(QtGui.QTableView):
     """
@@ -73,7 +73,7 @@ class LeafView(QtGui.QTableView):
 
         # For potentially huge datasets use a customised scrollbar
         if self.leaf_numrows > self.tmodel.numrows:
-            self.setItemDelegate(leafDelegate.LeafDelegate())
+            self.setItemDelegate(leaf_delegate.LeafDelegate())
             self.rbuffer_fault = False
             self.setVerticalScrollBarPolicy(QtCore.Qt.ScrollBarAlwaysOn)
             self.tricky_vscrollbar = scrollbar.ScrollBar(self)
